finaliza com grid-areas

--- a/grid/07-aula-12-areas-de-grid/index.html
+++ b/grid/07-aula-12-areas-de-grid/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudo CSS GRID - Aula 11 - Sobreposição</title>
+    <title>Estudo CSS GRID - Aula 12 - Grid Areas</title>
     <link rel="stylesheet" href="style_grid.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
+        <header>header</header>
+        <main>main</main>
+        <aside>aside</aside>
+        <footer>footer</footer>
     </div>
 </body>
 
